--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ requires-python = ">=3.12, <3.13"
 dependencies = [
     "glfw>=2.10.0",
     "jinja2>=3.1.6",
+    "numpy>=2.4.1",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "pyopengl>=3.1.10",
+    "pyopengl-accelerate>=3.1.10",
     "pyyaml>=6.0.3",
 ]
 
